# XOperad

./: Forest.hs  Main.hs  Matrix.hs  Numbers.hs  Operad.hs  README.md  Vector.hs  XOperad.cabal  XOperadLite
Simple/: Main.hs
